documentation for new API endpoints

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,24 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet"
     href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
   </head>
   <body>
+    <div class = "container">
+      <div class = "row">
+        <div class = "col-12">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>Built using the MongoDB.com <a href ="https://www.mongodb.com/docs/atlas/sample-data/sample-analytics/">sample_analytics</a> database.</p>
     <h2>Data</h2>
     <h3>Customers</h3>
-    <p>Customer schema:</p>
-    <pre>
-    <code class="language-js">
-const schema = mongoose.Schema({
+    <p>
+    Customer schema:
+    <pre><code class="language-js">const schema = mongoose.Schema({
   username: String,
   name: String,
     address: String,
@@ -31,13 +36,10 @@ const schema = mongoose.Schema({
       active: Boolean, 
       benefits: [String] 
     }
-})
-    </code>
-  </pre>
-    <p>Example item:</p>
+})</code></pre>
+Example item:
     <pre>
-      <code class="language-js">
-{
+      <code class="language-js">{
   "tier_and_details": {
       "benefits": [],
       "0df078f33aa74a2e9696e0520c1a828a": {
@@ -61,50 +63,71 @@ const schema = mongoose.Schema({
   "email": "arroyocolton@gmail.com",
   "active": true,
   "accounts": [371138, 324287, 276528, 332179, 422649, 387979]
-}
-      </code>
-    </pre>
+}</code></pre>
+  </p>
     <h4>Customer URLs</h4>
-    <p>Get all customers:</p>
-    <pre>
-<a class = "pageSlug"><span class = "pageURL"></span>account/</a>
-    </pre>
-    <p>Get customers by id:</p>
-    <pre>
-<span class = "pageURL"></span>accounts/id/:id
-    </pre>
+    <h5>Get all customers:</h5>
+    <p>
+      <p>Base URL:</p>
+      <a class = "pageSlug"><span class = "pageURL"></span>customer/</a>
+    </p>
+    <h5>By skip and limit:</h5>
+    <p>
+      <a class = "pageSlug"><span class = "pageURL"></span>customer/:n/:k</a>
+    </p>
+    <p>Where n = the starting index and k = the number of items</p>
     <p>Example:</p>
-    <pre>
-<span class = "pageURL"></span>accounts/id/5ca4bbcea2dd94ee58162a68
-    </pre>
-
+    <p>
+      <a class = "pageSlug"><span class = "pageURL"></span>customer/10/5</a>
+    </p>
+    <p>Returns items 10 through 15</p>
+    <h5>Get customers by id:</h5>
+    <p>Base URL:</p>
+    <p>
+      <span class = "pageURL"></span>customer/id/:id
+    <p>Example:</p>
+    <p>
+      <a class = "pageSlug"><span class = "pageURL"></span>customer/id/5ca4bbcea2dd94ee58162a68</a>
+    </p>
+    <h5>Get customers by username:</h5>
+    <p>Base URL:</p>
+    <p>
+      <span class = "pageURL"></span>customer/username/:username
+    <p>Example:</p>
+    <p>
+      <a class = "pageSlug"><span class = "pageURL"></span>customer/username/fmiller</a>
+    </p>
     <h3>Accounts</h3>
     <p>Account schema:</p>
-
-    <pre>
-      <code class="language-js">
-const schema = mongoose.Schema({
+    <pre><code class="language-js">const schema = mongoose.Schema({
   account_id: Number,
   limit: Number,
   products: [String]
-})
-      </code>
-    </pre> 
+})</code></pre> 
     <p>Example item:</p>
-    <pre>
-      <code class="language-js">
-{
+<pre><code class="language-js">{
   "_id": "5ca4bbc7a2dd94ee5816238d", 
   "account_id": 557378, 
   "limit": 10000, 
   "products": ["InvestmentStock", "Commodity", "Brokerage", "CurrencyService"]
-}
-</code>
-    </pre> 
-    <h3>Transactions</h3>
-    <pre>
-      <code class="language-js">
-const schema = mongoose.Schema({
+}</code></pre>
+  <h4>Account URLs</h4>
+  <h5>Get all accounts:</h5>
+  <p>
+    <p>Base URL:</p>
+    <a class = "pageSlug"><span class = "pageURL"></span>account/</a>
+  </p>
+  <h5>Get account by account_id:</h5>
+  <p>Base URL:</p>
+  <p>
+    <span class = "pageURL"></span>account/account_id/:id
+  <p>Example:</p>
+  <p>
+    <a class = "pageSlug"><span class = "pageURL"></span>account/account_id/557378</a>
+  </p>
+  <h3>Transactions</h3>
+  <p>Transaction schema:</p>
+  <pre><code class="language-js">const schema = mongoose.Schema({
   account_id: Number,
   transaction_count: Number,
   bucket_start_date: Date,
@@ -118,13 +141,9 @@ const schema = mongoose.Schema({
     price: String,
     total: String
   }]
-})
-      </code>
-    </pre>
-
-    <pre>
-      <code class="language-js">
-{
+})</code></pre>
+<p>Example item:</p>
+<pre><code class="language-js">{
   "_id": "5ca4bbc1a2dd94ee58161cb1",
   "account_id": 443178,
   "transaction_count": 66,
@@ -149,10 +168,24 @@ const schema = mongoose.Schema({
       "price": "20.6769287918292690164889791049063205718994140625",
       "total": "59570.23184926012403650474880"
   }]
-}
-      </code>
-    </pre>  
-    
+}</code></pre>
+  <h4>Transaction URLs</h4>
+  <h5>Get all transactions:</h5>
+  <p>
+    <p>Base URL:</p>
+    <a class = "pageSlug"><span class = "pageURL"></span>transaction/</a>
+  </p>
+  <h5>Get transactions by account_id:</h5>
+  <p>Base URL:</p>
+  <p>
+    <span class = "pageURL"></span>transaction/account_id/:id
+  <p>Example:</p>
+  <p>
+    <a class = "pageSlug"><span class = "pageURL"></span>transaction/account_id/557378</a>
+  </p>
+    </div>
+  </div>
+</div>
     <script>
       for (let item of document.getElementsByClassName("pageURL")){
         item.innerHTML = window.location.href;
